--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
      <form action="/">
       <div class="row">
         <div class="form-group">
-          <label for="name">Ваше имя</label>
+          <label for="name">ТВОЕ ИМЯ</label>
           <input type="text" id="name" placeholder="Введите Имя" />
         </div>
       </div>
