--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="Email">Ваш Email</label>
+        <label for="Email">WWWWWWWWW</label>
         <input type="text" id="Email" placeholder="Введите email" />
       </div>
     </div>
